# c

./: .editorconfig  .gitignore  .pre-commit-config.yaml  1.txt  AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  axiom.py  axiom_tui.py  config.example.toml  create_templates.sh  product.txt  pyproject.toml  readmexicans.md  setup.axiom.sh  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.old/: git_repo_sync.sh  index0.html  main0.js  main1.js  style0.css  style1.css  style10.css  style3.css  style5.css  style7.css  style8.css
agents/: .gitignore  gemini.Personal Communications Triage Agent (with Sentiment Analysis).md  gemini.Prompt DJ Setlist Generator.md  gemini.Strategic Opportunity & Implementation Architect.md  gemini.arch_assistant.md  gemini.arch_assistant0.md  gemini.auditor.git.md  gemini.autonomous_project_manager.md  gemini.autonomous_strategic_partner.md  gemini.ci_cd_debugger.md  gemini.codebase_auditor.md  gemini.comm_triage.md  gemini.command_line_engineer.md  gemini.communications_intelligence_analyzer.md  gemini.dezgo_interactive_prompt_architect.md  gemini.directive_generator.md  gemini.email_task_extractor.md  gemini.git.assistant.md  gemini.imp.editor.md  gemini.imp.strategist.md  gemini.implementation_plan_generator.md  gemini.instructional_content_parser.md  gemini.medical_engine.md  gemini.operational_command_agent.md  gemini.strategist.md  gemini.system_architecture_optimizer.md  gemini.text_classifier_and_extractor.md  gemini.thematic_prompt_generator.md  jules.auditor.md
apps/: ai_console.py  amazon_generator.py  permute.py  system_analyzer.py  weather-cli.py
assets/: yt_wl_remover.user.js
docs/: cal.concerts.affinity.html  cal.concerts.affinity.md  cal.concerts.md  fix.automatic_suspend.html  fix.files.md  ggl.verify_url_removal.html  git.init.md  git.repo.md  imp.comm.md  imp.etsy.md  imp.file_processor.html  imp.git.md  imp.repo.html  imp.seo.tea.html  imp.skills.md  mod.dev.html
experimental/: ai_console.py  axiom.db  web_app.py
frontend/: index.html  package-lock.json
prompts/: axiom.conversational_core.md  gem.git.repo.md  gem.prompt_engine.html  gem.prompt_engine.md  gemini.assistant.imp.md  gemini.assistant.imp.v2.md  gemini.converter.html_to_markdown.md  gemini.executor.md  gemini.executor.project.md  gemini.generator.imp.md  gemini.generator.imp.v2.md  gemini.generator.imp.v3.md  gemini.github_assistant.md  gemini.imp_assistant0.md  gemini.implementation_assistant.md  gemini.manager.comm.md  gemini.matcher.concerts.md  gemini.researcher.concerts.md  gemini.run_settings.md  github.architecture_advice.md  github.repo_eval.md  jules.git.audit.md  prompt_generator.md  research.concerts.html
scripts/: add_extension.sh  backup.sh  frame.extractor.sh  git.commit_push.sh  git.sync.sh  launch_session.sh  organize_by_extension.sh  random_char.sh  random_num.sh  read_aloud.espeak.sh  read_aloud.piper.sh  record_screen.sh  sitrep.sh  start_session.sh  usb.receive.sh  yt_batch_dl.sh
tests/: test_files.py
web/: about.html  contact.html  index.html  portfolio.html  security-practices.html  services.html
workspace/: line_counter_plan.md  prompt_0.md  prompt_3.md
(+49 files in other folders)
