[project]
name = "t"
version = "0.1.0"
description = "A unified toolkit for AI, media, and system utilities."
authors = [
    {name = "TechEliteAutomation", email = "at253341@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Poetry Build Instructions (This is the critical part) ---
[tool.poetry]
# This line MUST point to "toolkit"
packages = [{include = "toolkit", from = "src"}]
scripts = { amazon-gen = "apps.amazon_generator:main" }

# --- Tool Configurations ---

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
pytest = "^8.4.0"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E501"
